Updated '_site_pages/guides.html' via CloudCannon

--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -3,24 +3,13 @@ title: Guides
 header_image: uploads/coding.jpg
 ---
 
-{% assign topics = "," %}
+{% assign topics = "," | split: ","%}
 
 
 {% for guide in site.guides %}
-  <pre>
-  {{ guide | inspect }}
-  </pre>
+ {% assign topics = topics | concat: guide.categories | uniq %}
 {% endfor %}
 
-
-{% assign groups = site.guides | group_by: "categories" | sort: "name" %}
-
-{% for group in groups %}
-  {% assign name = group.name  | remove: '["' | remove: '"]' | strip | append: "," %}
-  {% assign topics = topics | append: name %}
-{% endfor %}
-
-{% assign topics = topics | split: "," | uniq %}
 
 
 <section class="row topics">
