--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -7,7 +7,7 @@ header_image: uploads/coding.jpg
 
 
 {% for guide in site.guides %}
- {% assign topics = topics | concat: guide.categories | uniq %}
+ {% assign topics = topics | concat: guide.categories | uniq | sort %}
 {% endfor %}
 
 
