--- a/_site_pages/tags.html
+++ b/_site_pages/tags.html
@@ -8,12 +8,14 @@ header_image:
 {% assign everything = site.guides | concat:site.posts %}
 
 {% for guide in site.guides %}
- {% assign tags = tags | concat: guide.tags | uniq | sort %}
+ {% if guide.tags.size > 0 %}
+   {% assign tags = tags | concat: guide.tags | uniq | sort %}
+ {% endif %}
 {% endfor %}
 
 {% for tag in site.tags %}
   {% assign t = tag | first %}
-  {% assign tags = tags | concat: t | uniq | sort %}
+  {% assign tags | push: t | uniq | sort %}
 {% endfor %}
 
 <pre>
