--- a/_site_pages/search.html
+++ b/_site_pages/search.html
@@ -1,6 +1,7 @@
 ---
 title: Search
 sitemap: false
+header_image:
 ---
 
 <p><span id="search-process">Loading</span> results <span id="search-query-container" style="display: none;">for "<strong id="search-query"></strong>"</span></p>
@@ -8,7 +9,7 @@ sitemap: false
 
 <script>
 	window.data = {
-	  {% assign searchable = site.guides | concat: site.pages | concat: site.posts %}
+	  {% assign searchable = site.guides | concat: site.pages | concat: site.posts | concat: site.slidedecks %}
 		{% for post in searchable %}
 			{% if post.title %}
 				{% unless post.excluded_in_search %}
