Updated '_site_pages/Generated-Pages/search.html' via CloudCannon

--- a/_site_pages/Generated-Pages/search.html
+++ b/_site_pages/Generated-Pages/search.html
@@ -2,6 +2,7 @@
 title: Search
 sitemap: false
 header_image:
+permalink: /search
 ---
 
 <p><span id="search-process">Loading</span> results <span id="search-query-container" style="display: none;">for "<strong id="search-query"></strong>"</span></p>
