Updated '_site_pages/Generated-Pages/slidedecks.html' via CloudCannon

--- a/_site_pages/Generated-Pages/slidedecks.html
+++ b/_site_pages/Generated-Pages/slidedecks.html
@@ -9,7 +9,7 @@ permalink: /slidedecks
  {% if decks.size > 0 %}
 		<ul class="slidedecks">
 		  {% for deck in decks %}
-		    <li><a target="_blank" href="{{ deck.url }}">{{ deck.title }}</a> <a class="fontawesome-icon" title="Launch slideshow" href="{{ deck.url }}"><i class="fa fa-fw fa-external-link-square"></i></a> <a class="print-icon" title="Print Friendly Version" href="{{ deck.url }}?print-pdf"><i class="fa fa-fw fa-print"></i></a> | <a class="pdf-icon" title="Download PDF" href="{{ deck.url }}?print-pdf&generatePDF=1"><i class="fa fa-file-pdf-o fa-fw"></i></a></li>
+		    <li><a target="_blank" href="{{ deck.url }}">{{ deck.title }}</a> <a class="fontawesome-icon" title="Launch slideshow" href="{{ deck.url }}"><i class="fa fa-fw fa-external-link"></i></a> <a class="print-icon" title="Print Friendly Version" href="{{ deck.url }}?print-pdf"><i class="fa fa-fw fa-print"></i></a> <a class="pdf-icon" title="Download PDF" href="{{ deck.url }}?print-pdf&generatePDF=1"><i class="fa fa-file-pdf-o fa-fw"></i></a></li>
 		  {% endfor %}
 		</ul>
 	{% endif %}
