Updated '_site_pages/Generated-Pages/guides.html' via CloudCannon

--- a/_site_pages/Generated-Pages/guides.html
+++ b/_site_pages/Generated-Pages/guides.html
@@ -9,6 +9,11 @@ permalink: /guides
 {% for guide in site.guides %}
  {% assign topics = topics | concat: guide.categories | uniq | sort %}
 {% endfor %}
+<table>
+      			  {% for guide in guides %}
+      			    <tr class="title"><td></td><a href="{{ guide.url }}">{{ guide.title }}</a></td></tr>
+      			  {% endfor %}
+</table>
 
 <section class="row topics">
   <div class="col-sm-4">
