--- a/_site_pages/Generated-Pages/guides.html
+++ b/_site_pages/Generated-Pages/guides.html
@@ -6,7 +6,7 @@ permalink: /guides
 
 
 <table>
-      			  {% for guide in site.guides %}
+      			  {% for guide in site.guides | sort %}
       			    <tr class="title">
       			      <td>
                     {% for category in guide.categories %}
