Updated '_site_pages/Generated-Pages/guides.html' via CloudCannon

--- a/_site_pages/Generated-Pages/guides.html
+++ b/_site_pages/Generated-Pages/guides.html
@@ -43,7 +43,7 @@ permalink: /guides
       			    <li class="title"><a href="{{ guide.url }}">{{ guide.title }}</a>
         			    <span class="tags">
         			    {% for tag in guide.tags %}
-                    <a class="tag-name">>{{ tag }}</a>
+                    <a class="tag-name">{{ tag }}</a>
                   {% endfor %}
                   </span>
       			    </li>
