--- a/_site_pages/Generated-Pages/guides.html
+++ b/_site_pages/Generated-Pages/guides.html
@@ -30,7 +30,7 @@ permalink: /guides
   <div class="col-sm-8">
     <div id="guide-list">
       <div class="listjs-search">
-        <input placeholder="Filter..." class="search" /> <i class="fa fa-search"></i>
+        <input placeholder="Filter..." class="fuzzy-search" /> <i class="fa fa-search"></i>
       </div>
       <div class="list">
         {% for topic in topics %}
