Updated '_site_pages/Generated-Pages/guides.html' via CloudCannon

--- a/_site_pages/Generated-Pages/guides.html
+++ b/_site_pages/Generated-Pages/guides.html
@@ -29,7 +29,7 @@ permalink: /guides
   </div>
   <div class="col-sm-8">
     <div id="guide-list">
-      <div class="listjs-search">
+      <div class="list-search">
         <input placeholder="Filter..." class="js-filter-search" /> <i class="fa fa-search"></i>
       </div>
       <div class="list">
