--- a/_site_pages/Generated-Pages/tags.html
+++ b/_site_pages/Generated-Pages/tags.html
@@ -40,8 +40,8 @@ permalink: /tags
   </div>
   <div class="col-sm-8">
     <div id="guide-list">
-      <div class="listjs-search">
-        <input placeholder="Filter..." class="search" /> <i class="fa fa-search"></i>
+      <div class="list-search">
+        <input placeholder="Filter..." class="js-filter-search" /> <i class="fa fa-search"></i>
       </div>
       <div class="list">
         {% for tag in tags %}
