--- a/_site_pages/Generated-Pages/guides.html
+++ b/_site_pages/Generated-Pages/guides.html
@@ -36,11 +36,10 @@ permalink: /guides
         {% for topic in topics %}
          {% assign guides = site.guides | where:"categories",topic %}
          {% if guides.size > 0 %}
-      			<a name="{{topic}}"></a>
+      			<h4 class="topic">{{ topic }}<a name="{{topic}}"></a></h4>
       			<ul>
       			  {% for guide in guides %}
-      			    <li class="title">
-      			      {{ topic }} :: <a href="{{ guide.url }}">{{ guide.title }}</a>
+      			    <li class="title"><a href="{{ guide.url }}">{{ guide.title }}</a>
         			    <span class="tags">
         			    {% for tag in guide.tags %}
                     <a class="tag-name" href="/tags#{{ tag }}">{{ tag }}</a>
