Updated '_site_pages/Generated-Pages/guides.html' via CloudCannon

--- a/_site_pages/Generated-Pages/guides.html
+++ b/_site_pages/Generated-Pages/guides.html
@@ -36,8 +36,11 @@ permalink: /guides
         {% for topic in topics %}
          {% assign guides = site.guides | where:"categories",topic %}
          {% if guides.size > 0 %}
-      		<section class="category">
-      			<h4 class="topic">{{ topic }}<a name="{{topic}}"></a></h4>
+      		<section class="category row">
+      			<div class="col-sm-1">
+      			  <h4 class="topic">{{ topic }}<a name="{{topic}}"></a></h4>
+      			</div>  
+      			<div class="col-sm-11">
       			<ul>
       			  {% for guide in guides %}
       			    <li class="title"><a href="{{ guide.url }}">{{ guide.title }}</a>
@@ -49,6 +52,7 @@ permalink: /guides
       			    </li>
       			  {% endfor %}
       			</ul>
+      			</div>
       		</section>
       		{% endif %}
       	{% endfor %} 
