--- a/_site_pages/Generated-Pages/guides.html
+++ b/_site_pages/Generated-Pages/guides.html
@@ -18,19 +18,19 @@ permalink: /guides
         {% for topic in topics %}
          {% assign guides = site.guides | where:"categories",topic %}
          {% if guides.size > 0 %}
-      		<section class="category row">
-      			<div class="col-sm-3">
-      			  <h4 class="topic">{{ topic }}<a name="{{topic}}"></a></h4>
-      			</div>  
-      			<div class="col-sm-8">
+      		<section class="category">
       			<ul>
       			  {% for guide in guides %}
-      			    <li class="title"><a href="{{ guide.url }}">{{ guide.title }}</a>
+      			    <li class="title row">
+      			      <div class="col-sm-3"><h4 class="topic">{{ topic }}<a name="{{topic}}"></a></h4></div>
+      			      <div class="col-sm-6"><a href="{{ guide.url }}">{{ guide.title }}</a></div>
+        			    <div class="col-sm-3">
         			    <span class="tags">
         			    {% for tag in guide.tags %}
                     <a class="tag-name" href="/tags#{{ tag }}">{{ tag }}</a>
                   {% endfor %}
                   </span>
+                  </div>
       			    </li>
       			  {% endfor %}
       			</ul>
