Updated '_site_pages/Generated-Pages/guides.html' via CloudCannon

--- a/_site_pages/Generated-Pages/guides.html
+++ b/_site_pages/Generated-Pages/guides.html
@@ -21,7 +21,7 @@ permalink: /guides
       		<section class="category">
       			<ul>
       			  {% for guide in guides %}
-      			    <li class="title row">
+      			    <li class="row">
       			      <div class="col-sm-3"><h4 class="topic">{{ topic }}<a name="{{topic}}"></a></h4></div>
       			      <div class="col-sm-6"><a href="{{ guide.url }}">{{ guide.title }}</a></div>
         			    <div class="col-sm-3">
