Updated '_site_pages/Generated-Pages/guides.html' via CloudCannon

--- a/_site_pages/Generated-Pages/guides.html
+++ b/_site_pages/Generated-Pages/guides.html
@@ -26,14 +26,12 @@ permalink: /guides
       			<ul>
       			  {% for guide in guides %}
       			    <li class="title row">
-      			      <div class="col-sm-9"><a href="{{ guide.url }}">{{ guide.title }}</a></div>
-        			    <div class="col-sm-3">
-          			    <span class="tags">
-          			    {% for tag in guide.tags %}
-                      <a class="tag-name" href="/tags#{{ tag }}">{{ tag }}</a>
-                    {% endfor %}
-                    </span>
-                  </div>
+      			      <a href="{{ guide.url }}">{{ guide.title }}</a>
+        			    <span class="tags">
+        			    {% for tag in guide.tags %}
+                    <a class="tag-name" href="/tags#{{ tag }}">{{ tag }}</a>
+                  {% endfor %}
+                  </span>
       			    </li>
       			  {% endfor %}
       			</ul>
