Updated '_site_pages/Generated-Pages/guides.html' via CloudCannon

--- a/_site_pages/Generated-Pages/guides.html
+++ b/_site_pages/Generated-Pages/guides.html
@@ -25,7 +25,7 @@ permalink: /guides
       			<div class="col-sm-8">
       			<ul>
       			  {% for guide in guides %}
-      			    <li class="title row">
+      			    <li class="title">
       			      <a href="{{ guide.url }}">{{ guide.title }}</a>
         			    <span class="tags">
         			    {% for tag in guide.tags %}
