Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -1,9 +1,10 @@
 ---
 title: Idea Generator
 header_image:
+permalink: /guides
 ---
 
-Need help coming up with a new project idea? Try the Maker Lab Idea Generator\!
+Need help coming up with a new project idea? Try the Maker Lab Idea Generator!
 
 Make a \[adj\] \[noun\]
 
