--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -1,10 +1,11 @@
 ---
 title: Idea Generator
 header_image:
-permalink: /guides
+permalink: /idea-generator
 ---
 
 Need help coming up with a new project idea? Try the Maker Lab Idea Generator!
+
 
 Make a \[adj\] \[noun\]
 
