Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -7,10 +7,12 @@ permalink: /idea-generator
 Need help coming up with a new project idea? Try the Maker Lab Idea Generator!
 
 
-Make a \[adj\] \[noun\]
+<h3>Make a <span class="igen-adj">_____</span> <span class="igen-noun">_____</span></h3>
 
-out of \[material\]
+<h3>...out of <span class="igen-material">_____</span></h3>
 
-using \[tool\]
+<h3>...using <span class="igen-tool">_____</span></h3>
 
-SAVE \| GENERATE NEW IDEA
+
+<button type="button">SAVE</button> | <button type="button"><i class="fa fa-back"></i>GENERATE NEW IDEA</button>
+
