--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -7,12 +7,12 @@ permalink: /idea-generator
 Need help coming up with a new project idea? Try the Maker Lab Idea Generator!
 
 
-<h3>Make a <span class="igen-adj">_____</span> <span class="igen-noun">_____</span></h3>
+<h3>Make a <span class="igen-adj">_ _ _ _ _</span> <span class="igen-noun">_ _ _ _ _</span></h3>
 
-<h3>...out of <span class="igen-material">_____</span></h3>
+<h3>...out of <span class="igen-material">_ _ _ _ _</span></h3>
 
-<h3>...using <span class="igen-tool">_____</span></h3>
+<h3>...using <span class="igen-tool">_ _ _ _ _</span></h3>
 
 
-<button type="button">SAVE</button> | <button type="button"><i class="fa fa-back"></i>GENERATE NEW IDEA</button>
+<button type="button" class="igen-save">SAVE</button> | <button type="button"><i class="fa fa-redo"></i> GENERATE NEW IDEA</button>
 
