Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -4,7 +4,7 @@ header_image:
 permalink: /idea-generator
 ---
 
-Need help coming up with a new project idea? Try the Maker Lab Idea Generator!
+<h2>Need help coming up with a new project idea? Try the Maker Lab Idea Generator!</h2>
 
 
 <h3>Make a <span class="igen-adj">_ _ _ _ _</span> <span class="igen-noun">_ _ _ _ _</span></h3>
