Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -4,8 +4,10 @@ header_image:
 permalink: /idea-generator
 ---
 
-<h2>Need help coming up with a new project idea? Try the Maker Lab Idea Generator!</h2>
+<h4>Need help coming up with a new project idea? Try the Maker Lab Idea Generator!</h4>
 
+
+<hr>
 
 <h3>Make a <span class="igen-adj">_ _ _ _ _</span> <span class="igen-noun">_ _ _ _ _</span></h3>
 
@@ -14,5 +16,5 @@ permalink: /idea-generator
 <h3>...using <span class="igen-tool">_ _ _ _ _</span></h3>
 
 
-<button type="button" class="igen-save">SAVE</button> | <button type="button"><i class="fa fa-redo"></i> GENERATE NEW IDEA</button>
+<button type="button" class="igen-save">SAVE</button> | <button class="igen-generate" type="button"><i class="fa fa-redo"></i> GENERATE NEW IDEA</button>
 
