Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -9,11 +9,11 @@ permalink: /idea-generator
 
 <hr>
 
-<h3>Make a <span class="igen-adj">_ _ _ _ _</span> <span class="igen-noun">_ _ _ _ _</span></h3>
+<h3>Make a <span class="igen-adj">________</span> <span class="igen-noun">________</span></h3>
 
-<h3>...out of <span class="igen-material">_ _ _ _ _</span></h3>
+<h3>...out of <span class="igen-material">________</span></h3>
 
-<h3>...using <span class="igen-tool">_ _ _ _ _</span></h3>
+<h3>...using <span class="igen-tool">________</span></h3>
 
 
 <button type="button" class="igen-save">SAVE</button> | <button class="igen-generate" type="button"><i class="fa fa-redo"></i> GENERATE NEW IDEA</button>
