Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -43,7 +43,10 @@ permalink: /idea-generator
   'radical',
   'spectacular',
   'gigantic',
-  'extremely tiny'
+  'extremely tiny',
+  'miniature',
+  'lugubrious',
+  'talkative'
   ];
   var randAdj = adjectives[Math.floor(Math.random() * adjectives.length)];
   var adjDiv = document.querySelector('.igen-adj');
