Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -72,7 +72,8 @@ permalink: /idea-generator
   'stamp',
   'sculpture',
   'sign',
-  'papercraft',
+  'greeting card',
+  'sticker',
   'spaceship',
   'dinosaur',
   'time machine'
