Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -52,10 +52,11 @@ permalink: /idea-generator
   var adjDiv = document.querySelector('.igen-adj');
   adjDiv.innerHTML = randAdj;
   
+  // Make sure noun is singular, a pair of shoes
   var nouns = [
-  'shoes', 
+  'pair of shoes', 
   'hat', 
-  'sunglasses',
+  'pair of sunglasses',
   'spoon',
   'fork',
   'cup',
