Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -50,7 +50,7 @@ permalink: /idea-generator
   'nonfunctional',
   'hexagonal'
   'triangular',
-  'circular'
+  'circular',
   'mushy'
   ];
   var randAdj = adjectives[Math.floor(Math.random() * adjectives.length)];
@@ -112,7 +112,6 @@ permalink: /idea-generator
   'plastic',
   'chipboard',
   'linoleum'
-  
   ];
   var randMaterial = materials[Math.floor(Math.random() * materials.length)];
   var materialDiv = document.querySelector('.igen-material');
