Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -94,7 +94,7 @@ permalink: /idea-generator
   var randNoun = nouns[Math.floor(Math.random() * nouns.length)];
   var nounDiv = document.querySelector('.igen-noun');
   nounDiv.innerHTML = randNoun;  
-  nounDiv.style.color = "red"; 
+  nounDiv.style.color = "violet"; 
 
   // Make sure nouns are singular, a pair of shoes
   var materials = [
@@ -132,15 +132,27 @@ permalink: /idea-generator
   '3D scanner',
   'microcontroller',
   'pair of scissors',
-  'single hand',
+  'pair of hands',
   'toothpick',
-  'audio recorder',
-  'microphone',
+  'audio recording device',
   'computer',
   'butter knife',
   'electronic cutter',
   'programming language',
-  'Blender',
+  '3D modeling program',
+  'digital audio workstation',
+  'musical instrument',
+  'paintbrush',
+  'digital paintbrush',
+  'photo editing program',
+  'chisel',
+  'knife',
+  'screwdriver',
+  'hammer', 
+  'pair of chopsticks',
+  'printing press',
+  'text editor',
+  'machine learning'
   ];
   var randTools = tools[Math.floor(Math.random() * tools.length)];
   var toolDiv = document.querySelector('.igen-tool');
