Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -48,7 +48,7 @@ permalink: /idea-generator
   'lugubrious',
   'talkative',
   'nonfunctional',
-  'hexagonal'
+  'hexagonal',
   'triangular',
   'circular',
   'mushy'
@@ -158,6 +158,5 @@ permalink: /idea-generator
   var toolDiv = document.querySelector('.igen-tool');
   toolDiv.innerHTML = randTool;  
   toolDiv.style.color = "red";
-
-  
 </script>
+
