Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -105,7 +105,7 @@ permalink: /idea-generator
   'felt',
   'fabric',
   'vinyl',
-  'acrylic'
+  'acrylic',
   'heat transfer',
   'engravable rubber',
   'PLA',
