Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -154,7 +154,7 @@ permalink: /idea-generator
   'text editor',
   'machine learning'
   ];
-  var randTools = tools[Math.floor(Math.random() * tools.length)];
+  var randTool = tools[Math.floor(Math.random() * tools.length)];
   var toolDiv = document.querySelector('.igen-tool');
   toolDiv.innerHTML = randTool;  
   toolDiv.style.color = "red";
