Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -5,6 +5,7 @@ permalink: /idea-generator
 ---
 
 <h4>Need help coming up with a new project idea? Try the Maker Lab Idea Generator!</h4>
+<i>Note: We take no responsibility for any wacky or impossible project ideas this thing may generate. Please use responsibly ;-)</i>
 
 
 <hr>
