Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -153,7 +153,7 @@ permalink: /idea-generator
   'pair of chopsticks',
   'printing press',
   'text editor',
-  'machine learning'
+  'machine learning algorithm'
   ];
   var randTool = tools[Math.floor(Math.random() * tools.length)];
   var toolDiv = document.querySelector('.igen-tool');
